@startuml

package "models" {
    class Magasin {
        +id
        +nom
        +quartier
        +type
    }
    class Produit {
        +id
        +nom
        +categorie
        +prix
        +description
    }
    class Stock {
        +id
        +produit
        +magasin
        +quantite
    }
    class Vente {
        +id
        +date_heure
        +total
        +magasin
    }
    class VenteProduit {
        +id
        +vente
        +produit
        +quantite
        +prix_unitaire
    }
}

package "services" {
    class MagasinService
    class ProduitService
    class StockService
    class VenteService
}

' Relations entre modèles
Magasin "1" o-- "*" Stock : possède >
Produit "1" o-- "*" Stock : stocké dans >
Magasin "1" o-- "*" Vente : réalise >
Vente "1" o-- "*" VenteProduit : contient >
Produit "1" o-- "*" VenteProduit : vendu dans >

' Services accèdent aux modèles
MagasinService ..> Magasin
ProduitService ..> Produit
StockService ..> Stock
VenteService ..> Vente
VenteService ..> VenteProduit
VenteService ..> Produit
VenteService ..> Stock
VenteService ..> Magasin

@enduml